--- a/Day2/index.html
+++ b/Day2/index.html
@@ -10,6 +10,7 @@
 <div class="bluecircle"></div>
 
 <h1>Akshaya</h1>
+  <img src = "https://www.canva.com/design/DAEaIOR6BR8/HldYDXCay4d8BY8-x2jnHg/view?utm_content=DAEaIOR6BR8&utm_campaign=designshare&utm_medium=link&utm_source=homepage_design_menu">
 <h2>HTML</h2>
 <p>Qwerty</p>
 <div>
